added paths for temporary certs for the inital verification process. chagned root for acme test

--- a/nginx.conf
+++ b/nginx.conf
@@ -23,7 +23,17 @@ server {
     server_name                 ~^(?P<subdomain>.+?)\.brianbaker\.ca$;
     keepalive_timeout           70;
     charset                     utf-8;
+    
+    #==========================================================#
+    # Temporary certs used for inital let's encrypt validation #
+    #==========================================================#
+    ssl_certificate             /etc/nginx/ssl/nginx.crt
+    ssl_certificate_key         /etc/nginx/ssl/nginx.key
+    #==========================================================#
 
+    #==========================================================#
+    #                   Signed certificates                    #
+    #==========================================================#
     # ssl_certificate             /etc/letsencrypt/live/brianbaker.ca/fullchain.pem;
     # ssl_certificate_key         /etc/letsencrypt/live/brianbaker.ca/privkey.pem;
 
@@ -36,6 +46,7 @@ server {
     # ssl_stapling                on;
     # ssl_stapling_verify         on;
     # add_header                  Strict-Transport-Security max-age=15768000;
+    #==========================================================#
 
     client_max_body_size        2M;
 
@@ -64,7 +75,7 @@ server {
 
     location ^~ /.well-known/acme-challenge/ {   
         default_type "text/plain";   
-        root /var/www/encrypt-ssl; 
+        root /var/www/brianbaker.ca/encrypt-ssl; 
     }  
     
     location = /.well-known/acme-challenge/ {   
